add slapsh and set HomePage view

--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
         "@rnmapbox/maps": "^10.0.0-beta.65",
         "dotenv": "^16.0.3",
         "expo": "~47.0.12",
+        "expo-splash-screen": "^0.17.5",
         "expo-status-bar": "~1.4.2",
+        "lottie-react-native": "^5.1.5",
         "moment": "^2.29.4",
         "react": "18.1.0",
         "react-dom": "18.1.0",
         "react-native": "0.70.5",
+        "react-native-detect-navbar-android": "^0.3.0",
         "react-native-dotenv": "^3.4.7",
         "react-native-gesture-handler": "~2.8.0",
         "react-native-reanimated": "~2.12.0",
@@ -30,8 +33,10 @@
         "react-native-screens": "~3.18.0",
         "react-native-spinkit": "^1.5.1",
         "react-native-swipe-gestures": "^1.0.5",
+        "react-native-toast-message": "^2.1.5",
         "react-native-vector-icons": "^9.2.0",
-        "react-native-web": "~0.18.9"
+        "react-native-web": "~0.18.9",
+        "rn-detect-soft-nav": "^1.1.1"
     },
     "devDependencies": {
         "@babel/core": "^7.12.9",
@@ -46,6 +51,7 @@
         "@typescript-eslint/eslint-plugin": "^5.29.0",
         "@typescript-eslint/parser": "^5.29.0",
         "babel-jest": "^26.6.3",
+        "babel-plugin-module-resolver": "^5.0.0",
         "babel-plugin-transform-inline-environment-variables": "^0.4.4",
         "eslint": "^7.32.0",
         "jest": "^26.6.3",
