--- a/app.json
+++ b/app.json
@@ -12,6 +12,9 @@
             "resizeMode": "contain",
             "backgroundColor": "#ffffff"
         },
+        "androidNavigationBar": {
+            "visible": "immersive"
+        },
         "updates": {
             "fallbackToCacheTimeout": 0
         },
@@ -23,6 +26,9 @@
             "adaptiveIcon": {
                 "foregroundImage": "./src/assets/adaptive-icon.png",
                 "backgroundColor": "#FFFFFF"
+            },
+            "androidNavigationBar": {
+                "visible": "immersive"
             }
         },
         "web": {
