--- a/package.json
+++ b/package.json
@@ -1,63 +1,69 @@
 {
-    "name": "weatherapp",
-    "version": "1.0.0",
-    "main": "node_modules/expo/AppEntry.js",
-    "scripts": {
-        "start": "expo start -c",
-        "android": "expo start --android",
-        "ios": "expo start --ios",
-        "web": "expo start --web",
-        "pretty": "prettier --write \"**/*.{json,ts,tsx,js,jsx}\""
-    },
-    "dependencies": {
-        "@react-native-async-storage/async-storage": "^1.17.10",
-        "@react-navigation/native": "^6.0.12",
-        "@react-navigation/native-stack": "^6.8.0",
-        "@react-navigation/stack": "^6.2.3",
-        "@rnmapbox/maps": "^10.0.0-beta.65",
-        "dotenv": "^16.0.3",
-        "expo": "~47.0.12",
-        "expo-splash-screen": "^0.17.5",
-        "expo-status-bar": "~1.4.2",
-        "lottie-react-native": "^5.1.5",
-        "moment": "^2.29.4",
-        "react": "18.1.0",
-        "react-dom": "18.1.0",
-        "react-native": "0.70.5",
-        "react-native-detect-navbar-android": "^0.3.0",
-        "react-native-dotenv": "^3.4.7",
-        "react-native-gesture-handler": "~2.8.0",
-        "react-native-reanimated": "~2.12.0",
-        "react-native-restart": "^0.0.24",
-        "react-native-safe-area-context": "4.4.1",
-        "react-native-screens": "~3.18.0",
-        "react-native-spinkit": "^1.5.1",
-        "react-native-swipe-gestures": "^1.0.5",
-        "react-native-toast-message": "^2.1.5",
-        "react-native-vector-icons": "^9.2.0",
-        "react-native-web": "~0.18.9",
-        "rn-detect-soft-nav": "^1.1.1"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.12.9",
-        "@babel/runtime": "^7.12.5",
-        "@react-native-community/eslint-config": "^2.0.0",
-        "@tsconfig/react-native": "^2.0.2",
-        "@types/dotenv": "^8.2.0",
-        "@types/jest": "^26.0.23",
-        "@types/react": "~18.0.14",
-        "@types/react-native": "~0.70.6",
-        "@types/react-test-renderer": "^18.0.0",
-        "@typescript-eslint/eslint-plugin": "^5.29.0",
-        "@typescript-eslint/parser": "^5.29.0",
-        "babel-jest": "^26.6.3",
-        "babel-plugin-module-resolver": "^5.0.0",
-        "babel-plugin-transform-inline-environment-variables": "^0.4.4",
-        "eslint": "^7.32.0",
-        "jest": "^26.6.3",
-        "metro-react-native-babel-preset": "^0.70.3",
-        "react-test-renderer": "18.0.0",
-        "typescript": "^4.6.3"
-    },
-    "private": true
+  "name": "weatherapp",
+  "version": "1.0.0",
+  "main": "node_modules/expo/AppEntry.js",
+  "scripts": {
+    "start": "expo start -c",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "pretty": "prettier --write \"**/*.{json,ts,tsx,js,jsx}\""
+  },
+  "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.10",
+    "@react-navigation/native": "^6.0.12",
+    "@react-navigation/native-stack": "^6.8.0",
+    "@react-navigation/stack": "^6.2.3",
+    "@rnmapbox/maps": "^10.0.0-beta.65",
+    "dotenv": "^16.0.3",
+    "expo": "~47.0.12",
+    "expo-splash-screen": "^0.17.5",
+    "expo-status-bar": "~1.4.2",
+    "i": "^0.3.7",
+    "lottie-react-native": "^5.1.5",
+    "moment": "^2.29.4",
+    "npm": "^9.4.1",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-native": "0.70.5",
+    "react-native-detect-navbar-android": "^0.3.0",
+    "react-native-dotenv": "^3.4.7",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-localize": "^2.2.4",
+    "react-native-navigation-bar-color": "^2.0.2",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-restart": "^0.0.24",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-spinkit": "^1.5.1",
+    "react-native-swipe-gestures": "^1.0.5",
+    "react-native-system-navigation-bar": "^2.2.0",
+    "react-native-toast-message": "^2.1.5",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "~0.18.9",
+    "rn-detect-soft-nav": "^1.1.1",
+    "expo-navigation-bar": "~2.0.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.9",
+    "@babel/runtime": "^7.12.5",
+    "@react-native-community/eslint-config": "^2.0.0",
+    "@tsconfig/react-native": "^2.0.2",
+    "@types/dotenv": "^8.2.0",
+    "@types/jest": "^26.0.23",
+    "@types/react": "~18.0.14",
+    "@types/react-native": "~0.70.6",
+    "@types/react-test-renderer": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
+    "@typescript-eslint/parser": "^5.29.0",
+    "babel-jest": "^26.6.3",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
+    "eslint": "^7.32.0",
+    "jest": "^26.6.3",
+    "metro-react-native-babel-preset": "^0.70.3",
+    "react-test-renderer": "18.0.0",
+    "typescript": "^4.6.3"
+  },
+  "private": true
 }
