--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,5 @@
 NODE_ENV=development
 WEATHER_API_BASE_URL=https://api.openweathermap.org/data/2.5
-WEARTHER_API_KEY=
+WEATHER_API_KEY=
+MAPBOX_BASE_URL=https://api.mapbox.com
 MAPBOX_API_KEY=
