--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "expo-status-bar": "~1.4.2",
     "i": "^0.3.7",
     "i18next": "^22.4.9",
-    "lottie-react-native": "^5.1.5",
+    "lottie-react-native": "5.1.4",
     "moment": "^2.29.4",
     "npm": "^9.4.1",
     "react": "18.1.0",
