--- a/.env
+++ b/.env
@@ -1,5 +1,17 @@
+# NODE ROOT ENVIRONEMENT
+# -----------------------------
 NODE_ENV=production
-REACT_APP_WEATHER_API_BASE_URL=https://api.openweathermap.org/data/2.5
+
+# OPEN WEATHER API
+# -----------------------------
+REACT_APP_WEATHER_API_BASE_URL=
 REACT_APP_WEATHER_API_KEY=
-REACT_APP_MAPBOX_BASE_URL=https://api.mapbox.com
+
+# MAPBOX API
+# -----------------------------
+REACT_APP_MAPBOX_BASE_URL=
 REACT_APP_MAPBOX_API_KEY=
+
+# CONTACT
+# -----------------------------
+REACT_APP_CONTACT_EMAIL=
