--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-gesture-handler": "~2.8.0",
     "react-native-localize": "^2.2.4",
     "react-native-navigation-bar-color": "^2.0.2",
+    "react-native-rename": "^3.2.12",
     "react-native-restart": "^0.0.24",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
@@ -77,6 +78,8 @@
     "preset": "react-native"
   },
   "rnpm": {
-    "assets": ["src/assets/fonts/Lato"]
+    "assets": [
+      "src/assets/fonts/Lato"
+    ]
   }
 }
