--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weather",
-  "version": "0.0.1",
+  "version": "1.0.1",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -20,11 +20,10 @@
     "@react-navigation/native-stack": "^6.8.0",
     "@react-navigation/stack": "^6.2.3",
     "@reduxjs/toolkit": "^1.9.3",
-    "@rnmapbox/maps": "^10.0.0-beta.65",
     "dotenv": "^16.0.3",
     "i": "^0.3.7",
     "i18next": "^22.4.9",
-    "lottie-react-native": "5.1.4",
+    "lottie-react-native": "^5.1.5",
     "moment": "^2.29.4",
     "npm": "^9.4.1",
     "react": "18.2.0",
@@ -33,7 +32,7 @@
     "react-native": "0.71.3",
     "react-native-detect-navbar-android": "^0.3.0",
     "react-native-dotenv": "^3.4.7",
-    "react-native-gesture-handler": "~2.8.0",
+    "react-native-gesture-handler": "^2.9.0",
     "react-native-localize": "^2.2.4",
     "react-native-navigation-bar-color": "^2.0.2",
     "react-native-rename": "^3.2.12",
