--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "weather",
-  "version": "1.0.1",
+  "name": "MyWeather",
+  "version": "1.0.2",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -29,7 +29,7 @@
     "react": "18.2.0",
     "react-dom": "18.1.0",
     "react-i18next": "^12.1.5",
-    "react-native": "0.71.3",
+    "react-native": "0.71.4",
     "react-native-detect-navbar-android": "^0.3.0",
     "react-native-dotenv": "^3.4.7",
     "react-native-gesture-handler": "^2.9.0",
@@ -57,28 +57,22 @@
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^29.2.1",
     "@types/react": "^18.0.24",
-    "@types/react-native": "~0.70.6",
     "@types/react-native-vector-icons": "^6.4.13",
     "@types/react-redux": "^7.1.25",
-    "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
-    "babel-jest": "^29.2.1",
+    "@types/react-test-renderer": "^18.0.0",
     "babel-plugin-module-resolver": "^5.0.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
+    "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
-    "metro-react-native-babel-preset": "0.73.7",
+    "metro-react-native-babel-preset": "0.73.8",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
   },
   "jest": {
     "preset": "react-native"
-  },
-  "rnpm": {
-    "assets": [
-      "src/assets/fonts/Lato"
-    ]
   }
 }
